Update licenses, run oracle script through JDBC