@@ -19,7 +19,12 @@ package org.apache.hadoop.hive.metastore.tools.schematool;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.sql.Connection;
+import java.sql.SQLException;
+import java.sql.Statement;
+import java.util.Locale;
 
 import org.apache.hadoop.hive.metastore.HiveMetaException;
 import org.slf4j.Logger;
@@ -29,6 +34,7 @@ class SchemaToolTaskRebuildIndexes extends SchemaToolTask {
 
   private static final Logger LOG = LoggerFactory.getLogger(SchemaToolTaskRebuildIndexes.class);
   static final String REBUILD_INDEXES_FILE_PREFIX = "rebuild-indexes";
+  private static final int ORACLE_INDEX_MISSING_ERROR = 1418;
 
   @Override
   void setCommandLineArguments(SchemaToolCommandLine cl) {
@@ -50,7 +56,7 @@ class SchemaToolTaskRebuildIndexes extends SchemaToolTask {
     if (schemaTool.isDryRun()) {
       try {
         LOG.info("Dry run: would execute {}", script.getAbsolutePath());
-        LOG.info(new String(Files.readAllBytes(script.toPath())));
+        LOG.info(Files.readString(script.toPath(), StandardCharsets.UTF_8));
       } catch (IOException e) {
         throw new HiveMetaException("Failed to read rebuild-indexes script", e);
       }
@@ -59,10 +65,53 @@ class SchemaToolTaskRebuildIndexes extends SchemaToolTask {
 
     LOG.info("Starting index rebuild using {}", scriptFile);
     try {
-      schemaTool.execSql(scriptDir, scriptFile);
-    } catch (IOException e) {
+      if (HiveSchemaHelper.DB_ORACLE.equalsIgnoreCase(dbType)) {
+        executeOracleScript(script);
+      } else {
+        schemaTool.execSql(scriptDir, scriptFile);
+      }
+    } catch (IOException | SQLException e) {
       throw new HiveMetaException("Index rebuild failed", e);
     }
     LOG.info("Index rebuild complete.");
+  }
+
+  private void executeOracleScript(File script) throws IOException, HiveMetaException, SQLException {
+    String content = Files.readString(script.toPath(), StandardCharsets.UTF_8);
+    try (Connection connection = schemaTool.getConnectionToMetastore(false);
+         Statement statement = connection.createStatement()) {
+      StringBuilder sql = new StringBuilder();
+      for (String line : content.split("\\r?\\n")) {
+        String trimmed = line.trim();
+        if (trimmed.isEmpty() || trimmed.startsWith("--")) {
+          continue;
+        }
+        sql.append(line).append('\n');
+        if (trimmed.endsWith(";")) {
+          executeOracleStatement(statement, sql.toString());
+          sql.setLength(0);
+        }
+      }
+      if (!sql.toString().trim().isEmpty()) {
+        throw new HiveMetaException("Oracle rebuild-indexes script contains an unterminated SQL statement.");
+      }
+    }
+  }
+
+  private void executeOracleStatement(Statement statement, String sql) throws SQLException {
+    String stmt = sql.trim();
+    if (stmt.endsWith(";")) {
+      stmt = stmt.substring(0, stmt.length() - 1).trim();
+    }
+    try {
+      statement.execute(stmt);
+    } catch (SQLException e) {
+      if (stmt.toUpperCase(Locale.ROOT).startsWith("DROP INDEX")
+          && e.getErrorCode() == ORACLE_INDEX_MISSING_ERROR) {
+        LOG.info("Skipping missing index during Oracle rebuild: {}", stmt);
+        return;
+      }
+      throw e;
+    }
   }
 }
